--- a/index.ipynb
+++ b/index.ipynb
@@ -313,25 +313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Buenos Aires',\n",
-       " 'Country': 'Argentina',\n",
-       " 'Population': 2891,\n",
-       " 'Area': 203}"
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[0] \n",
+    "salina = cities[9] \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
@@ -345,11 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities[4][\"Pop\"]\n",
     "los_cabos_pop # 288"
    ]
   },
